# hellok8s-django

./: .dockerignore  .envrc  .gitignore  .prettierignore  .watchmanconfig  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  devenv.nix  devenv.yaml  docker-entrypoint.sh  env.example  gunicorn.config.py  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml  cicd.yml  deploy.yml
chart/: Chart.yaml  values.yaml
chart/partials/: s3-ignore-cache.conf
chart/templates/: collectstatic_job.yaml  configmap.yaml  deployment.yaml  ingress.yaml  migration_job.yaml  s3_service.yaml  worker_deployment.yaml
chart/values/prod/: secrets.yaml  values.yaml
core/: customstorage.py  views.py
core/static/css/: input.css  output.css
core/templates/: base.html
core/templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  signup_closed.html  verification_sent.html
core/templates/core/: index.html
myauth/: adapters.py  admin.py  forms.py  models.py
myauth/migrations/: 0001_initial.py
myutils/: behaviors.py  helpers.py  iana_list_of_toplevel_domains.txt  ratelimit_patch.py  tasks.py  urls.py  views.py
myutils/templates/myutils/: debug.html
post/: admin.py  models.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_author_alter_post_slug.py
post/templates/post/: detail.html
project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
project/settings/: base.py  prod.py  test.py
